# dmtcp

./: CMakeAutoconf.txt  CMakeAutoconf.txt.in  CMakeLists.txt  Makefile.in  configure  configure.ac
include/: BKstatic_dmtcp.h  config.h.in  static_dmtcp.h
plugin/: Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  dmtcp_launch.cpp  dmtcpworker.cpp  pluginmanager.cpp  shareddata.cpp  syscallsreal.c  syscallwrappers.h  threadwrappers.cpp  writeckpt.cpp
src/plugin/: CMakeLists.txt  Makefile.in
static-src/: Makefile
static-src/src/: replace_symbols_elf.c
static-src/test/: dmtcp_plt.c  main.c  test_rse  wrapfile1.c  wrapfile2.c  wrapfile3.c
static-src/utils/: elf.py
static-util/: CMakeLists.txt  Makefile.am  Makefile.in  dmtcp_ld  dmtcp_ld_NORUNTIME  dmtcp_static_gen  dmtcp_wrapper_symbols  replace_symbols_elf.c  save_rest_regs.s
static-util/TEST_DMTCP/: Makefile
static-util/example/: main.c
